@@ -3,10 +3,10 @@ include ../../configure
 FFLAGS = $(LIBFFLAGS)
 
 O        = $(OBJEXT)
-OBJS = avgsd.$(O) dirnm.$(O) hdiag.$(O) multr.$(O) stepwz.$(O) correl.$(O) \
+OBJS = dirnm.$(O) hdiag.$(O) multr.$(O) stepwz.$(O) correl.$(O) \
  eigenv.$(O) matinv.$(O) polyfit.$(O) betacf.$(O) fvalue.$(O) nestanova.$(O) \
  betai.$(O) gammln.$(O) tvalue.$(O) erfcc.$(O) polyterm.$(O) metro.$(O) \
- weightpoly.$(O) lsfit.$(O) localpolyfit.$(O) gaussj.$(O) lsfit2.$(O)
+ weightpoly.$(O) localpolyfit.$(O) gaussj.$(O)
 
 all: $(OBJS)
 
